--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,5 +3,6 @@
 @import "navbar.css";
 @import "header.css";
 @import "about.css";
+@import "project.css";
 @import "contact.css";
 @import "footer.css";
