--- a/CSS/header.css
+++ b/CSS/header.css
@@ -2,7 +2,7 @@
     background: url(../Assets/img/stars_horizontal.jpg) no-repeat center;
     background-size: cover;
     text-align: center;
+    text-size-adjust: 100%;
     color: var(--aqua-green);
-    font-family: 'Francois One', sans-serif;
     font-stretch: extra-expanded;
 }
