--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -5,6 +5,7 @@
     --aqua-green: #9efcf4; 
     --violet: #8D3C95;
     --light-blue: rgb(93, 113, 179);
+    --navy-blue: rgb(32, 44, 56);
 
     --font-one: 'VT323', monospace;
 }
