--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,6 +1,13 @@
 #about {
     text-align: center;
     color: var(--aqua-green); 
+    margin: auto;
+    border: 10px solid gray;
+    border-radius: 10%;
+    padding: 20px;
+    width: 1000px;
+    position: relative;
+
 }
 #project-link {
     
