--- a/CSS/project.css
+++ b/CSS/project.css
@@ -1,5 +1,13 @@
 #project {
     text-align: center;
     color: var(--aqua-green); 
+    font-family: 'Bungee', cursive;   
+}
+
+#creature-project {
     
+}
+
+#storefront-project {
+
 }
