--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -1,6 +1,6 @@
 :root {
     --orange-red: #B63112;
-    --brownish-gold: #B67D12;
+    --brownish-gold: rgb(255, 193, 7);
     --blue-purple: #514C9F;
     --aqua-green: #9efcf4; 
     --violet: #8D3C95;
