--- a/CSS/about.css
+++ b/CSS/about.css
@@ -5,9 +5,10 @@
     border: 10px solid gray;
     border-radius: 10%;
     padding: 20px;
-    width: 1000px;
+    width: 1200px;
     position: relative;
-
+    font-family: 'Roboto Mono', monospace;
+    font-size: 3em;
 }
 #project-link {
     
