--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,6 +1,7 @@
 .jumbotron {
-    background: url(../Assets/img/stars_horizontal.jpg) no-repeat center;
-    background-size: cover;
+    /* background: url(../Assets/img/stars_horizontal.jpg) no-repeat center;
+    background-size: cover;  */
+    background: transparent;
     text-align: center;
     color: var(--aqua-green);
     font-family: 'Bungee', cursive;
