--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -1,3 +1,86 @@
-.nav-item {
-    color: var(--aqua-green); 
+
+nav{
+    background: var(--navy-blue);
+    padding: 0;
+    z-index: 100;
+
 }
+.navbar{
+    position: fixed;
+    width: 100%;
+    top: 0;
+}
+.navbar-light .navbar-brand{
+  color: var(--aqua-green);
+  font-family: 'Roboto Mono', monospace;
+}
+
+.navbar-light .navbar-brand:hover {
+    color:var(--brownish-gold);
+}
+
+.navbar-light .navbar-brand:focus{
+    color:var(--aqua-green);
+}
+
+.nav-item a{
+    color: white;
+    font-family: var(--font-one);
+}
+
+/* .navbar-brand{
+    color: var(--aqua-green);
+    font-family: 'Roboto Mono', monospace;
+    font-weight: bolder;    
+} */
+/* Dropdown Button */
+.dropbtn {
+    background-color: var(--brownish-gold);
+    color: black;
+    font-family: 'Bungee', cursive;
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 40%
+  }
+  
+  /* Dropdown button on hover & focus */
+  .dropbtn:hover, .dropbtn:focus {
+    background-color:var(--aqua-green);
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    /* display: inline-block; */
+    margin-right: 25px;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    border-radius: 20%;
+
+    background-color: var(--brownish-gold);
+    min-width: 80px;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    font-family: 'Bungee', cursive;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {
+      background-color: var(--aqua-green);
+      border-radius: 20%;
+    }
+  
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {display:block;}
